--- a/singles.html
+++ b/singles.html
@@ -18,21 +18,6 @@
             background-color: black;
             color: black;
         }
-
-        .fullscreen {
-            position: absolute;
-            z-index: 10;
-            top: 10px;
-            right: 10px;
-        }
-
-        .fullscreen img {
-            width: 50px;
-            height: 50px;
-            cursor: pointer;
-            opacity: 0.5;
-         filter: invert(100%);
-        }
         .header h2{
             color: white;
             font-size: 20px;
@@ -168,77 +153,77 @@
         </div>
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')" class="single-container">
-                <img src="https://cheekyjmusic.github.io/music/Scrambled.png">
+                <img src="https://cheekyjmusic.github.io/music/assets/Scrambled.png">
                 <div class="single-details">
                     <h2 class="single-name">Omelette</h2>
                     <p class="single-info">Single • 2023</p>
-                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/submarine.mp3', 'Submarine')" class="single-container">
-                <img src="https://cheekyjmusic.github.io/music/submarine.png">
+                <img src="https://cheekyjmusic.github.io/music/assets/submarine.png">
                 <div class="single-details">
                     <h2 class="single-name">Submarine</h2>
                     <p class="single-info">Single • 2023</p>
-                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/sbremix.mp3', 'Suburbs Freestyle Remix')" class="single-container">
-                <img src="https://cheekyjmusic.github.io/music/sbremix.jpg">
+                <img src="https://cheekyjmusic.github.io/music/assets/sbremix.jpg">
                 <div class="single-details">
                     <h2 class="single-name">Suburbs Freestyle Remix</h2>
                     <p class="single-info">Single • 2023</p>
-                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/twinkie.mp3', 'Corner Store Twinkie')" class="single-container">
-                <img src="https://cheekyjmusic.github.io/music/twinkie.png">
+                <img src="https://cheekyjmusic.github.io/music/assets/twinkie.png">
                 <div class="single-details">
                     <h2 class="single-name">Corner Store Twinkie</h2>
                     <p class="single-info">Single • 2023</p>
-                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/lincoln.mp3', '1860s Lincoln')" class="single-container">
-                <img src="https://cheekyjmusic.github.io/music/lincoln.png">
+                <img src="https://cheekyjmusic.github.io/music/assets/lincoln.png">
                 <div class="single-details">
                     <h2 class="single-name">1860s Lincoln</h2>
                     <p class="single-info">Single • 2023</p>
-                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/sumo.mp3', 'Sumo Wrestler')" class="single-container">
-                <img src="https://cheekyjmusic.github.io/music/sumo.png">
+                <img src="https://cheekyjmusic.github.io/music/assets/sumo.png">
                 <div class="single-details">
                     <h2 class="single-name">Sumo Wrestler</h2>
                     <p class="single-info">Single • 2023</p>
-                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/tacobell.mp3', 'Taco Bell Diss')" class="single-container">
-                <img src="https://cheekyjmusic.github.io/music/tacobell.png">
+                <img src="https://cheekyjmusic.github.io/music/assets/tacobell.png">
                 <div class="single-details">
                     <h2 class="single-name">Taco Bell Diss</h2>
                     <p class="single-info">Single • 2023</p>
-                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -249,7 +234,7 @@
                 <div class="single-details">
                     <h2 class="single-name">Suburbs Freestyle</h2>
                     <p class="single-info">Single • 2023</p>
-                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/assets/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -261,7 +246,7 @@
     </audio> 
     <div class="bottom-rectangle">
         <div class="play-pause-container" onclick="togglePlayPause()">
-            <img class="play-pause-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/pause.svg">
+            <img class="play-pause-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/pause.svg">
         </div>
     </div>   
     <div class="song-info">
@@ -425,25 +410,25 @@ document.querySelector('.progress-bar-container').addEventListener('click', seek
     const favicon = document.querySelector('link[rel="icon"]');
 
     if (song === "https://cheekyjmusic.github.io/music/songs/Omelette.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/Scrambled.png";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/Scrambled.png";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/submarine.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/submarine.png";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/submarine.png";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/sbremix.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/sbremix.jpg";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/sbremix.jpg";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/twinkie.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/twinkie.png";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/twinkie.png";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/lincoln.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/lincoln.png";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/lincoln.png";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/sumo.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/sumo.png";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/sumo.png";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/tacobell.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/tacobell.png";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/tacobell.png";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/suburbsfreestyle.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/suburbsfreestyle.jpg";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/suburbsfreestyle.jpg";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/metro.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/cheekyboomin.png";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/cheekyboomin.png";
     } else if (song === "https://cheekyjmusic.github.io/music/songs/hds.mp3") {
-        favicon.href = "https://cheekyjmusic.github.io/music/cheekyboomin.png";
+        favicon.href = "https://cheekyjmusic.github.io/music/assets/cheekyboomin.png";
     } else {
         // Set the default favicon image
         favicon.href = "https://raw.githubusercontent.com/cheekyjmusic/music/main/logo.png";
