--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -191,7 +191,7 @@
   opacity: 50%;
 }
   </style>
-  <link rel="icon" href="https://raw.githubusercontent.com/cheekyjmusic/music/main/cheekyboomin.png" type="image/x-icon">
+  <link rel="icon" href="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png" type="image/x-icon">
 </head>
 <body>
     <div class="fullscreen">
@@ -214,7 +214,7 @@
  <!--remove this later (end)-->
   <div class="container">
     <div class="album-container">
-      <img class="album-cover" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/cheekyboomin.png" alt="Album Cover" onclick="resize()">
+      <img class="album-cover" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png" alt="Album Cover" onclick="resize()">
       <div class="album-details">
         <span class="album-text">Album</span>
         <h1>Cheeky Boomin</h1>
@@ -520,6 +520,11 @@ function fullscreen(){
     }
   }
 }
+
+window.onload = function() {
+    alert('All bugs will be fixed in an upcoming update');
+};
+
 
   </script>
 </body>
