--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -521,10 +521,7 @@ function fullscreen(){
   }
 }
 
-window.onload = function() {
-    alert('All bugs will be fixed in an upcoming update');
-};
-
+    alert('This page will be updated soon');
 
   </script>
 </body>
