added report bug

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
             <img src="https://static.thenounproject.com/png/21032-200.png">
             <h1>Archive</h1>
         </div></a>
+        <a style="text-decoration: none;" href="https://github.com/cheekyjmusic/music/issues/new"><div style="margin-top: 10px;" class="menu-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/193/193224.png">
+            <h1>Report Bug</h1>
+        </div></a>
     </div>
 
     <div onclick="toggleMenu()" class="menu-shadow"></div>
