--- a/index.html
+++ b/index.html
@@ -72,42 +72,6 @@
             margin-left: 10px;
         }
 
-        .bottom-rectangle {
-            position: fixed;
-            bottom: 0;
-            opacity: 0;
-            width: 100%;
-            height: 80px;
-            background-color: black;
-            display: flex;
-            justify-content: center; /* Horizontally center the content */
-            align-items: center; /* Vertically center the content */
-        }
-
-        .play-pause-image {
-            height: 60px;
-            width: auto;
-        }
-
-        .progress-bar-container {
-            position: fixed;
-            bottom: 80px;
-            left: 0;
-            opacity: 0;
-            width: 100%;
-            height: 10px;
-            background-color: #ddd;
-            z-index: 1;
-            display: flex;
-        }
-        
-        .progress-bar {
-  position: relative;
-  height: 100%;
-  background-color: #324078;
-  width: 0;
-}
-
         .item-image {
             width: 150px;
             height: 150px;
@@ -139,38 +103,6 @@
             vertical-align: top;
         }
 
-        .play-pause-container {
-            margin-left: calc(-50vw + 50%);
-            margin-right: calc(-50vw + 50%);
-        }
-        
-        .audio {
-            pointer-events: none;
-            height: 0px;
-            width: 0px;
-            opacity: 0;
-        }
-        .song-info {
-  position: fixed;
-  bottom: 8px;
-  left: 10px;
-  display: flex;
-  align-items: center;
-  color: white;
-   z-index: 2;
-}
-.current-time {
-    margin-left: 15px;
-    margin-top: 10px;
-   color: white;
-   opacity: 0%;
-   }
-   
-  .song-playing {
-   height: 65px;
-   width: 65px;
-   opacity: 0%;
-  }
   .item-image:hover {
     outline: 4px solid white;
     transition: outline 0.3s ease;
@@ -182,6 +114,7 @@
     opacity: 50%;
   }
     </style>
+    <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/player.css">
     <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/menu.css">
 </head>
 <body>
