--- a/search.html
+++ b/search.html
@@ -1,2 +1,93 @@
-<h1>File Being Created...</h1>
-<button href="https://cheekyjmusic.github.io/music">Go Back</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cheeky J</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/logo.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Prompt', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: black;
+            color: white;
+        }
+    </style>
+    <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/player.css">
+    <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/menu.css">
+</head>
+<body>
+    <div class="menu-button">
+        <img class="menu-button-img" onclick="toggleMenu()" src="https://static.thenounproject.com/png/3869892-200.png">
+    </div>
+    <div class="menu-container">
+        <div style="margin-top: 50px;" class="menu-item">
+            <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/logo.png">
+            <h1>Menu</h1>
+        </div> 
+        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/search.html"><div style="margin-top: 10px;" class="menu-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/3031/3031293.png">
+            <h1>Search</h1>
+        </div></a>
+        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/credits.txt"><div style="margin-top: 10px;" class="menu-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/864/864685.png">
+            <h1>Credits</h1>
+        </div></a>
+        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/singles.html"><div style="margin-top: 10px;" class="menu-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/1705/1705062.png">
+            <h1>Discography</h1>
+        </div></a>
+        <div onclick="fullscreen()" style="margin-top: 10px;" class="menu-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/3354/3354155.png">
+            <h1>Fullscreen</h1>
+        </div>
+        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/archive.html"><div style="margin-top: 10px;" class="menu-item">
+            <img src="https://static.thenounproject.com/png/21032-200.png">
+            <h1>Archive</h1>
+        </div></a>
+        <a style="text-decoration: none;" href="https://github.com/cheekyjmusic/music/issues/new"><div style="margin-top: 10px;" class="menu-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/193/193224.png">
+            <h1>Report Bug</h1>
+        </div></a>
+    </div>
+
+    <div onclick="toggleMenu()" class="menu-shadow"></div>
+
+    <div class="search container">
+        <img src="https://cdn-icons-png.flaticon.com/512/3031/3031293.png">
+        <h1>Search</h1>
+    </div>
+
+    <script>
+        function fullscreen() {
+            if (!document.fullscreenElement) {
+                if (document.documentElement.requestFullscreen) {
+                    document.documentElement.requestFullscreen();
+                } else if (document.documentElement.mozRequestFullScreen) {
+                    document.documentElement.mozRequestFullScreen();
+                } else if (document.documentElement.webkitRequestFullscreen) {
+                    document.documentElement.webkitRequestFullscreen();
+                } else if (document.documentElement.msRequestFullscreen) {
+                    document.documentElement.msRequestFullscreen();
+                }
+            } else {
+                if (document.exitFullscreen) {
+                    document.exitFullscreen();
+                } else if (document.mozCancelFullScreen) {
+                    document.mozCancelFullScreen();
+                } else if (document.webkitExitFullscreen) {
+                    document.webkitExitFullscreen();
+                } else if (document.msExitFullscreen) {
+                    document.msExitFullscreen();
+                }
+            }
+        }
+    </script>    
+    <script src="https://cheekyjmusic.github.io/music/menu.js"></script>
+    <script src="https://cheekyjmusic.github.io/music/player.js"></script>
+</body>
+</html>
