--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
             }
         }
     </script>    
+    <script src="https://cheekyjmusic.github.io/music/playfromurl.js"></script>
     <script src="https://cheekyjmusic.github.io/music/menu.js"></script>
     <script src="https://cheekyjmusic.github.io/music/player.js"></script>
 </body>
