fixed bugs and made it so that space bar pauses/plays

--- a/search.html
+++ b/search.html
@@ -217,7 +217,7 @@ function displaySearchResults(results) {
 
 function redirectToSong(songName) {
     if (songName === 'Metro Station' || songName === 'Hotdog Stand' || songName === 'Mr Clean' || songName === 'Cheeky Boomin') {
-        window.location.href = 'https://cheekyjmusic.github.io/music/cheekyboomin.html?loadInSong' + songName;
+        window.location.href = 'https://cheekyjmusic.github.io/music/cheekyboomin.html?loadInSong=' + songName;
     } else {
         window.location.href = 'https://cheekyjmusic.github.io/music/singles.html?loadInSong=' + songName;
     }
