--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         .main-container {
             padding: 20px;
-            background: linear-gradient(to bottom, #365B7B 0%, black 7%);
+            background: linear-gradient(to bottom, #282008 0%, black 7%);
             min-height: 1220px;
         }
 
@@ -159,7 +159,7 @@
     <div onclick="toggleMenu()" class="menu-shadow"></div>
 
     <div class="thumbnail-container">
-        <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/backgroundmainnew.jpg" alt="artist-thumbnail">
+        <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/background.png" alt="artist-thumbnail">
         <div class="artist-name-container">
             <p class="artist-name">Cheeky J</p>
         </div>
