--- a/singles.html
+++ b/singles.html
@@ -82,7 +82,7 @@
         <img class="menu-button-img" onclick="toggleMenu()" src="https://static.thenounproject.com/png/3869892-200.png">
     </div>
     <div class="menu-container">
-        <a href="https://cheekyjmusic.github.io/music"><div style="margin-top: 50px;" class="menu-item">
+        <a style="text-decoration: none;" href="http://cheekyjmusic.github.io/music"><div style="margin-top: 50px;" class="menu-item">
             <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/logo.png">
             <h1>Menu</h1>
         </div></a>
@@ -114,6 +114,7 @@
             <img src="https://cdn-icons-png.flaticon.com/512/193/193224.png">
             <h1>Report Bug</h1>
         </div></a>
+        <p class="update-date">Updated Oct 7, 2023</p>
     </div>
 
     <div onclick="toggleMenu()" class="menu-shadow"></div>
