--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -85,10 +85,10 @@
         <img class="menu-button-img" onclick="toggleMenu()" src="https://static.thenounproject.com/png/3869892-200.png">
     </div>
     <div class="menu-container">
-        <div style="margin-top: 50px;" class="menu-item">
+        <a style="text-decoration: none;" href="http://cheekyjmusic.github.io/music"><div style="margin-top: 50px;" class="menu-item">
             <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/logo.png">
             <h1>Menu</h1>
-        </div> 
+        </div></a>
         <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/search.html"><div style="margin-top: 10px;" class="menu-item">
             <img src="https://cdn-icons-png.flaticon.com/512/3031/3031293.png">
             <h1>Search</h1>
@@ -117,6 +117,7 @@
             <img src="https://cdn-icons-png.flaticon.com/512/193/193224.png">
             <h1>Report Bug</h1>
         </div></a>
+        <p class="update-date">Updated Oct 7, 2023</p>
     </div>
 
     <div onclick="toggleMenu()" class="menu-shadow"></div>
