--- a/index.html
+++ b/index.html
@@ -174,7 +174,6 @@
             <img src="https://cdn-icons-png.flaticon.com/512/193/193224.png">
             <h1>Report Bug</h1>
         </div></a>
-        <p class="update-date">Updated Oct 9, 2023</p>
     </div>
 
     <div onclick="toggleMenu()" class="menu-shadow"></div>
@@ -196,7 +195,7 @@
             </div>
             <div class="artist-announcement">
                 <h1 class="announcement-title">Artist Announcement</h1>
-                <p>New Single Coming Soon: "Big Hippo"</p>
+                <p>Big Hippo 10-11-23 @4pm</p>
             </div>
         </div>
 
@@ -213,7 +212,7 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">Expand</a></h2>
             <div class="item-container">
-              <div id='upcoming' class="item" onclick="play('file:///media/removable/Samsung%20USB/spotyf/music/bh.wav', 'Big Hippo')">
+              <div id='upcoming' class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/bighippo.png">
                     <p class="item-name">Big Hippo</p>
                 </div>
