--- a/singles.html
+++ b/singles.html
@@ -119,7 +119,7 @@
             <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/"><h2>Cheeky J - Discography</h2></a>
         </div>
         <div id='upcoming' class="container">
-            <div onclick="playRelease('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo')" class="single-container">
+            <div onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo')" class="single-container">
                 <img src="https://cheekyjmusic.github.io/music/assets/bighippo.png">
                 <div class="single-details">
                     <h2 class="single-name">Big Hippo</h2>
