--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
             <div class="popular-container">
             <h2 class="section-title">Popular</h2>
             <p onclick="play('https://cheekyjmusic.github.io/music/songs/metro.mp3', 'Metro Station')" class="popular">1<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">Metro Station</p>
-            <p onclick="playRelease('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo') "class="popular">2<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/bighippo.png">Big Hippo</p>
+            <p class="popular">2<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/bighippo.png">Big Hippo</p>
             <p onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')" class="popular">3<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Scrambled.png">Omelette</p>
             </div>
             <div class="artist-announcement">
                 <h1 class="announcement-title">Artist Announcement</h1>
-                <p>Big Hippo 10-11-23 @4pm</p>
+                <p id="announcement">Big Hippo today @4pm</p>
             </div>
         </div>
 
