--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
             <div class="popular-container">
             <h2 class="section-title">Popular</h2>
             <p onclick="play('https://cheekyjmusic.github.io/music/songs/metro.mp3', 'Metro Station')" class="popular">1<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">Metro Station</p>
-            <p class="popular">2<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/bighippo.png">Big Hippo</p>
+            <p onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3','Big Hippo');" class="popular">2<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/bighippo.png">Big Hippo</p>
             <p onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')" class="popular">3<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Scrambled.png">Omelette</p>
             </div>
-            <div class="artist-announcement">
+            <!--<div class="artist-announcement">
                 <h1 class="announcement-title">Artist Announcement</h1>
-                <p id="announcement">Big Hippo today @4pm</p>
-            </div>
+                <p id="announcement">Listen to Big Hippo</p>
+            </div>-->
         </div>
 
         <div class="container">
@@ -212,7 +212,7 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">Expand</a></h2>
             <div class="item-container">
-              <div id='upcoming' class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo')">
+              <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/bighippo.png">
                     <p class="item-name">Big Hippo</p>
                 </div>
