--- a/singles.html
+++ b/singles.html
@@ -118,7 +118,7 @@
         <div class="header">
             <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/"><h2>Cheeky J - Discography</h2></a>
         </div>
-        <div id='upcoming' class="container">
+        <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo')" class="single-container">
                 <img src="https://cheekyjmusic.github.io/music/assets/bighippo.png">
                 <div class="single-details">
